<resources>

    <!--App Name-->
    <string name="app_name">LocalBox</string>


    <!--Language Chooser options-->
    <string name="select_a_language">Select a Language</string>
    <string name="arabic">Arabic</string>
    <string name="chinese">Chinese</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="hindi">Hindi</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="thai">Thai</string>
    <string name="vietnamese">Vietnamese</string>


    <!--Category Chooser options-->
    <string name="select_a_category">Select A Category</string>
    <string name="numerics">Numerics</string>
    <string name="statements">Statements</string>
    <string name="questions">Questions</string>
    <string name="adjectives">Adjectives</string>
    <string name="nouns">Nouns</string>


    <!--Category Fragent-->
    <string name="tap_the_speech_bubbles">Tap the Speech Bubbles</string>


    <!--Speed Seek Bar-->
    <string name="playback_speed">Playback Speed: %.1fx</string>
    <string name="normal_speed">Normal Speed</string>
    <string name="slowest_speed">Slowest Speed</string>
    <string name="slow_speed">Slow Speed</string>
    <string name="fast_speed">Fast Speed</string>
    <string name="fastest_speed">Fastest Speed</string>


    <!--Menu Items-->
    <string name="about">About</string>
    <string name="language_info">Language Info</string>
    <string name="category_info">Category Info</string>

</resources>
