<?xml version="1.0" encoding="utf-8"?>

<!--Layout for CategoryChooserFragment (PORTRAIT)-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:showIn="@layout/fragment_language_chooser"
              tools:context=".ActivitiesAndFragments.CategoryChooserActivity"
              android:orientation="vertical"
              android:background="@color/colorDarkBackground">


    <!--Layout for fragment Title and Flag of Language chosen-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <!--Title-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_a_category"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <!--Flag of Language chosen-->
        <ImageView
            android:id="@+id/flag_action_bar"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"/>
    </LinearLayout>




    <!--Spacer-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>




    <!--Numerics - Button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/numerics"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="@color/colorPrimaryDark"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/colorPrimaryDark"
            app:fb_iconResource="@drawable/numerics_picture"
            app:fb_iconPosition="right"
            app:fb_radius="30dp"
            app:fb_text="@string/numerics"
            app:fb_textColor="#FFFFFF"/>
    </LinearLayout>



    <!--Spacer-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>




    <!--Statements - Button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/statements"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="@color/colorPrimaryDark"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/colorPrimaryDark"
            app:fb_iconResource="@drawable/statements_picture"
            app:fb_iconPosition="right"
            app:fb_radius="30dp"
            app:fb_text="@string/statements"
            app:fb_textColor="#FFFFFF"/>
    </LinearLayout>




    <!--Spacer-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>




    <!--Questions - Button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/questions"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="@color/colorPrimaryDark"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/colorPrimaryDark"
            app:fb_iconResource="@drawable/questions_picture"
            app:fb_iconPosition="right"
            app:fb_radius="30dp"
            app:fb_text="@string/questions"
            app:fb_textColor="#FFFFFF"/>
    </LinearLayout>




    <!--Spacer-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>




    <!--Adjectives - Button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/adjectives"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="@color/colorPrimaryDark"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/colorPrimaryDark"
            app:fb_iconResource="@drawable/adjectives_picture"
            app:fb_iconPosition="right"
            app:fb_radius="30dp"
            app:fb_text="@string/adjectives"
            app:fb_textColor="#FFFFFF"/>
    </LinearLayout>




    <!--Spacer-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>




    <!--Nouns - Button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:gravity="center">
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/nouns"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:fb_borderColor="@color/colorPrimaryDark"
            app:fb_borderWidth="1dp"
            app:fb_defaultColor="@color/colorPrimary"
            app:fb_focusColor="@color/colorPrimaryDark"
            app:fb_iconResource="@drawable/nouns_picture"
            app:fb_iconPosition="right"
            app:fb_radius="30dp"
            app:fb_text="@string/nouns"
            app:fb_textColor="#FFFFFF"
            />
    </LinearLayout>




    <!--Spacer-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

</LinearLayout>